--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -132,7 +132,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Assessment Start Date"
                     },
@@ -159,7 +159,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Project Site"
                     },
@@ -411,7 +411,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Project Details"
                     },
@@ -465,7 +465,7 @@
                     "instructions": {
                         "en": ""
                     },
-                    "is_editable": false,
+                    "is_editable": true,
                     "name": {
                         "en": "Project Type"
                     },
@@ -1560,7 +1560,7 @@
                                 "text": "Polygon"
                             }
                         ],
-                        "label": "Spatial Location",
+                        "label": "Project Location",
                         "maxZoom": 20,
                         "minZoom": 0,
                         "overlayConfigs": [],
@@ -1571,7 +1571,7 @@
                     },
                     "id": "6e5fb6d3-7216-45f6-ac4e-c138fa74d441",
                     "label": {
-                        "en": "Spatial Location"
+                        "en": "Project Location"
                     },
                     "node_id": "2bb08950-a880-11ed-95a4-5254004d77d3",
                     "sortorder": 1,
@@ -4087,12 +4087,12 @@
                     },
                     "function_id": "60000000-0000-0000-0000-000000001001",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
-                    "id": "81b9bb69-f8f7-49d6-805b-bee5ebac95b9"
+                    "id": "7db540a4-52f5-43b9-adf0-3f7a5165fe81"
                 }
             ],
             "graphid": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
             "iconclass": "fa fa-diamond",
-            "is_editable": false,
+            "is_editable": true,
             "isresource": true,
             "jsonldcontext": null,
             "name": {
@@ -8525,8 +8525,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "2fe2f112-aac7-11ee-845c-080027b7463b",
-                "published_time": "2024-01-04T00:04:57.368"
+                "publicationid": "48516fe6-ba33-11ee-bfc8-080027b7463b",
+                "published_time": "2024-01-23T15:06:31.445"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
@@ -8562,7 +8562,7 @@
     ],
     "metadata": {
         "db": "PostgreSQL 15.3 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 11.3.1 20221121 (Red Hat 11.3.1-4), 64-bit",
-        "git hash": "878aec681 2023-11-20 12:09:49 -0800",
+        "git hash": "6f4433a6f 2024-01-22 23:28:45 -0800",
         "os": "Linux",
         "os version": "5.14.0-333.el9.x86_64"
     }
