--- a/src/bcfms/bcfms/package.json
+++ b/src/bcfms/bcfms/package.json
@@ -7,7 +7,7 @@
         "start": "./media/node_modules/.bin/cross-env NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 ./media/node_modules/.bin/webpack serve --config webpack/webpack.config.dev.js"
     },
     "devDependencies": {
-        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.5.x"
+        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.5.0"
     },
     "dependencies": {
         "arches": "archesproject/arches#7.5.0"
