--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -2248,14 +2248,14 @@
                         "i18n_properties": [
                             "placeholder"
                         ],
-                        "label": "Industry Contact",
+                        "label": "External Contact",
                         "placeholder": {
                             "en": ""
                         }
                     },
                     "id": "bffa6cc2-41de-4efd-bc53-2e09f9022e0e",
                     "label": {
-                        "en": "Industry Contact"
+                        "en": "External Contact"
                     },
                     "node_id": "472b2810-a354-11ed-932e-5254004d77d3",
                     "sortorder": 2,
@@ -4087,7 +4087,7 @@
                     },
                     "function_id": "60000000-0000-0000-0000-000000001001",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
-                    "id": "7db540a4-52f5-43b9-adf0-3f7a5165fe81"
+                    "id": "871a9bff-31f6-4897-b7b2-9fff12013c1e"
                 }
             ],
             "graphid": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
@@ -5177,13 +5177,13 @@
                     "sourcebranchpublication_id": null
                 },
                 {
-                    "alias": "industry_actor",
+                    "alias": "external_contact",
                     "config": {
                         "graphs": [
                             {
                                 "graphid": "605b0bbc-8661-4cf2-b340-df743a8c5f89",
                                 "inverseRelationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
-                                "name": "BC Fossil Contributor",
+                                "name": "Contributor",
                                 "relationshipCollection": "00000000-0000-0000-0000-000000000005",
                                 "relationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
                                 "useOntologyRelationship": false
@@ -5412,7 +5412,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "Industry Actor",
+                    "name": "External Contact",
                     "nodegroup_id": "d791486a-9dc5-11ed-add1-5254004d77d3",
                     "nodeid": "472b2810-a354-11ed-932e-5254004d77d3",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E39_Actor",
@@ -8525,8 +8525,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "48516fe6-ba33-11ee-bfc8-080027b7463b",
-                "published_time": "2024-01-23T15:06:31.445"
+                "publicationid": "d9f4607e-d74e-11ee-8bfe-080027b7463b",
+                "published_time": "2024-02-29T16:06:55.915"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
@@ -8562,7 +8562,7 @@
     ],
     "metadata": {
         "db": "PostgreSQL 15.3 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 11.3.1 20221121 (Red Hat 11.3.1-4), 64-bit",
-        "git hash": "6f4433a6f 2024-01-22 23:28:45 -0800",
+        "git hash": "9975977532 2024-02-07 12:28:09 -0800",
         "os": "Linux",
         "os version": "5.14.0-333.el9.x86_64"
     }
