--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -627,11 +627,11 @@
                         "en": ""
                     },
                     "instructions": {
-                        "en": ""
+                        "en": "Upload EAO Application Information Requirements (AIR) or Land Act project description document"
                     },
                     "is_editable": true,
                     "name": {
-                        "en": "Project Documents"
+                        "en": "Project Description Document"
                     },
                     "nodegroup_id": "a881e5f6-9dc6-11ed-82b6-5254004d77d3",
                     "sortorder": 3,
@@ -745,7 +745,7 @@
                         "en": "FMO Plan Response"
                     },
                     "node_id": "02413b88-c373-11ed-af52-5254004d77d3",
-                    "sortorder": 2,
+                    "sortorder": 3,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000005"
                 },
@@ -792,6 +792,28 @@
                     "sortorder": 1,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000006"
+                },
+                {
+                    "card_id": "e9394b8a-c372-11ed-b586-5254004d77d3",
+                    "config": {
+                        "defaultValue": "",
+                        "i18n_properties": [
+                            "placeholder"
+                        ],
+                        "label": "Fossil Repository Agreement",
+                        "options": [],
+                        "placeholder": {
+                            "en": "Select an option"
+                        }
+                    },
+                    "id": "113c9962-d6a9-477e-b24d-99d9e11a3fe8",
+                    "label": {
+                        "en": "Fossil Repository Agreement"
+                    },
+                    "node_id": "3c2dce92-e000-11ee-bb3e-080027b7463b",
+                    "sortorder": 2,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000002"
                 },
                 {
                     "card_id": "95b5f427-0064-4b75-a17e-838a65b73cc4",
@@ -908,6 +930,53 @@
                     "sortorder": 2,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000002"
+                },
+                {
+                    "card_id": "e9394b8a-c372-11ed-b586-5254004d77d3",
+                    "config": {
+                        "defaultValue": "",
+                        "i18n_properties": [
+                            "placeholder"
+                        ],
+                        "label": "Fossil Repository Agreement",
+                        "options": [
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "e7b2c21f-315f-4236-8ab0-f93e04bb8bc6",
+                                "id": "c0820db1-30c1-4b0f-9779-756526395899",
+                                "sortorder": "",
+                                "text": "in place"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "711415c6-b073-4090-b4e7-6e73d8c970d2",
+                                "id": "247675d1-ef85-4e81-9d7b-30ea4163e3db",
+                                "sortorder": "",
+                                "text": "in progress"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "db929206-173b-4aa3-828e-ba46bd994e52",
+                                "id": "639f5a40-cd22-4b36-98b5-2c90a0eee308",
+                                "sortorder": "",
+                                "text": "not required"
+                            }
+                        ],
+                        "placeholder": {
+                            "en": "Select an option"
+                        }
+                    },
+                    "id": "1efe6e0e-07c0-4f96-b4f6-7dda12d53a08",
+                    "label": {
+                        "en": "Fossil Repository Agreement"
+                    },
+                    "node_id": "3c2dce92-e000-11ee-bb3e-080027b7463b",
+                    "sortorder": 2,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000009"
                 },
                 {
                     "card_id": "224f7282-cbf6-49de-ab0d-67ba7fe19e93",
@@ -1337,13 +1406,13 @@
                     "config": {
                         "acceptedFiles": ".pdf, .jpeg, .jpg, .gif, .doc, .docx",
                         "defaultValue": [],
-                        "label": "Project Documents",
+                        "label": "Project Description Document",
                         "maxFilesize": "200",
                         "rerender": true
                     },
                     "id": "4b0c6461-8b0e-4a5c-9cae-69670678e84d",
                     "label": {
-                        "en": "Project Documents"
+                        "en": "Project Description Document"
                     },
                     "node_id": "a881e5f6-9dc6-11ed-82b6-5254004d77d3",
                     "sortorder": 6,
@@ -2293,6 +2362,28 @@
                     "widget_id": "10000000-0000-0000-0000-000000000002"
                 },
                 {
+                    "card_id": "0241361a-c373-11ed-af52-5254004d77d3",
+                    "config": {
+                        "defaultValue": "",
+                        "i18n_properties": [
+                            "placeholder"
+                        ],
+                        "label": "SAP Fossil Repository Agreement",
+                        "options": [],
+                        "placeholder": {
+                            "en": "Select an option"
+                        }
+                    },
+                    "id": "a3be5687-a374-4511-afba-53044a4b81e2",
+                    "label": {
+                        "en": "SAP Fossil Repository Agreement"
+                    },
+                    "node_id": "a77d3314-dfff-11ee-bb3e-080027b7463b",
+                    "sortorder": 2,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000002"
+                },
+                {
                     "card_id": "95b5f427-0064-4b75-a17e-838a65b73cc4",
                     "config": {
                         "defaultValue": "",
@@ -2854,7 +2945,7 @@
                         "en": "FMO Plan Response"
                     },
                     "node_id": "e9395120-c372-11ed-b586-5254004d77d3",
-                    "sortorder": 2,
+                    "sortorder": 3,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000005"
                 },
@@ -2966,6 +3057,53 @@
                     "sortorder": 1,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000006"
+                },
+                {
+                    "card_id": "0241361a-c373-11ed-af52-5254004d77d3",
+                    "config": {
+                        "defaultValue": "",
+                        "i18n_properties": [
+                            "placeholder"
+                        ],
+                        "label": "SAP Fossil Repository Agreement",
+                        "options": [
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "e7b2c21f-315f-4236-8ab0-f93e04bb8bc6",
+                                "id": "c0820db1-30c1-4b0f-9779-756526395899",
+                                "sortorder": "",
+                                "text": "in place"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "711415c6-b073-4090-b4e7-6e73d8c970d2",
+                                "id": "247675d1-ef85-4e81-9d7b-30ea4163e3db",
+                                "sortorder": "",
+                                "text": "in progress"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "db929206-173b-4aa3-828e-ba46bd994e52",
+                                "id": "639f5a40-cd22-4b36-98b5-2c90a0eee308",
+                                "sortorder": "",
+                                "text": "not required"
+                            }
+                        ],
+                        "placeholder": {
+                            "en": "Select an option"
+                        }
+                    },
+                    "id": "f7f4aafc-68fe-437a-9bd7-e0567f2d0716",
+                    "label": {
+                        "en": "SAP Fossil Repository Agreement"
+                    },
+                    "node_id": "a77d3314-dfff-11ee-bb3e-080027b7463b",
+                    "sortorder": 2,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000009"
                 },
                 {
                     "card_id": "ff4fa404-a361-11ed-b0ab-5254004d77d3",
@@ -3822,6 +3960,15 @@
                 },
                 {
                     "description": null,
+                    "domainnode_id": "e939481a-c372-11ed-b586-5254004d77d3",
+                    "edgeid": "8fbc3947-aae5-4076-a883-e62bed69c364",
+                    "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
+                    "name": null,
+                    "ontologyproperty": "http://www.cidoc-crm.org/cidoc-crm/P9_consists_of",
+                    "rangenode_id": "3c2dce92-e000-11ee-bb3e-080027b7463b"
+                },
+                {
+                    "description": null,
                     "domainnode_id": "e174be1e-a30d-11ed-a1af-5254004d77d3",
                     "edgeid": "9222fc99-2856-44f5-8037-5479fb8b14e1",
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
@@ -3972,6 +4119,15 @@
                     "name": null,
                     "ontologyproperty": "http://www.cidoc-crm.org/cidoc-crm/P102_has_title",
                     "rangenode_id": "e1e38138-a3cf-11ed-8a3d-5254004d77d3"
+                },
+                {
+                    "description": null,
+                    "domainnode_id": "024132be-c373-11ed-af52-5254004d77d3",
+                    "edgeid": "d2896737-2ee5-4826-8ff6-ce9306543f02",
+                    "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
+                    "name": null,
+                    "ontologyproperty": "http://www.ics.forth.gr/isl/CRMsci/O13_triggers",
+                    "rangenode_id": "a77d3314-dfff-11ee-bb3e-080027b7463b"
                 },
                 {
                     "description": null,
@@ -4878,7 +5034,7 @@
                             "falseLabel"
                         ],
                         "trueLabel": {
-                            "en": "Acccepted"
+                            "en": "Accepted"
                         }
                     },
                     "datatype": "boolean",
@@ -5454,6 +5610,29 @@
                     "nodeid": "3c248dc8-a884-11ed-9606-5254004d77d3",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E39_Actor",
                     "parentproperty": "http://www.ics.forth.gr/isl/CRMdig/L33_has_maker",
+                    "sortorder": 0,
+                    "sourcebranchpublication_id": null
+                },
+                {
+                    "alias": "imp_fossil_repository_agreement",
+                    "config": {
+                        "rdmCollection": "37eccecb-dac0-435c-85a3-b1163c4a4cfb"
+                    },
+                    "datatype": "concept",
+                    "description": null,
+                    "exportable": false,
+                    "fieldname": null,
+                    "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
+                    "hascustomalias": false,
+                    "is_collector": false,
+                    "isrequired": false,
+                    "issearchable": true,
+                    "istopnode": false,
+                    "name": "IMP Fossil Repository Agreement",
+                    "nodegroup_id": "e939481a-c372-11ed-b586-5254004d77d3",
+                    "nodeid": "3c2dce92-e000-11ee-bb3e-080027b7463b",
+                    "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E14_Condition_Assessment",
+                    "parentproperty": "http://www.cidoc-crm.org/cidoc-crm/P9_consists_of",
                     "sortorder": 0,
                     "sourcebranchpublication_id": null
                 },
@@ -6302,7 +6481,7 @@
                     "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                     "hascustomalias": false,
                     "is_collector": false,
-                    "isrequired": false,
+                    "isrequired": true,
                     "issearchable": true,
                     "istopnode": false,
                     "name": "Ground Disturbance",
@@ -6994,6 +7173,29 @@
                     "nodeid": "a48e1732-c371-11ed-bb65-5254004d77d3",
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E7_Activity",
                     "parentproperty": "http://www.cidoc-crm.org/cidoc-crm/P117i_includes",
+                    "sortorder": 0,
+                    "sourcebranchpublication_id": null
+                },
+                {
+                    "alias": "sap_fossil_repository_agreement",
+                    "config": {
+                        "rdmCollection": "37eccecb-dac0-435c-85a3-b1163c4a4cfb"
+                    },
+                    "datatype": "concept",
+                    "description": null,
+                    "exportable": false,
+                    "fieldname": null,
+                    "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
+                    "hascustomalias": false,
+                    "is_collector": false,
+                    "isrequired": false,
+                    "issearchable": true,
+                    "istopnode": false,
+                    "name": "SAP Fossil Repository Agreement",
+                    "nodegroup_id": "024132be-c373-11ed-af52-5254004d77d3",
+                    "nodeid": "a77d3314-dfff-11ee-bb3e-080027b7463b",
+                    "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E14_Condition_Assessment",
+                    "parentproperty": "http://www.ics.forth.gr/isl/CRMsci/O13_triggers",
                     "sortorder": 0,
                     "sourcebranchpublication_id": null
                 },
@@ -8663,8 +8865,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "2846786a-dff7-11ee-9f03-080027b7463b",
-                "published_time": "2024-03-11T17:31:52.069"
+                "publicationid": "304c8718-e004-11ee-bb3e-080027b7463b",
+                "published_time": "2024-03-11T19:05:08.987"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
