923 - Remove extraneous comma

--- a/src/bcrhp/bcrhp/package.json
+++ b/src/bcrhp/bcrhp/package.json
@@ -10,7 +10,7 @@
         "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.5.2"
     },
     "dependencies": {
-        "arches": "archesproject/arches#7.5.2",
+        "arches": "archesproject/arches#7.5.2"
     },
     "nodeModulesPaths": {
     }
