--- a/src/bcrhp/docker-compose.yml
+++ b/src/bcrhp/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
-name: project_name7-5
+name: bcrhp7-5
 services:
-  project_name:
-    container_name:  project_name7-5
-    image: group_name/project_name7-5
+  bcrhp:
+    container_name:  bcrhp7-5
+    image: bcgov/bcrhp7-5
     build:
       context: ..
-      dockerfile: project_name/Dockerfile
+      dockerfile: bcrhp/Dockerfile
     command: run_arches
     volumes:
       - ../arches/:/web_root/arches
-      - ./:/web_root/project_name
+      - ./:/web_root/bcrhp
     env_file:
       - ./docker/env_file.env
     ports:
@@ -19,16 +19,16 @@ services:
     stdin_open: true
     tty: true
 
-  project_name-webpack:
-    container_name: project_name-webpack-7-5
-    image: group_name/project_name-webpack-7-5
+  bcrhp-webpack:
+    container_name: bcrhp-webpack-7-5
+    image: bcgov/bcrhp-webpack-7-5
     build:
       context: ..
-      dockerfile: project_name/docker/webpack/Dockerfile
+      dockerfile: bcrhp/docker/webpack/Dockerfile
     command: run_webpack
     volumes:
       - ../arches/:/web_root/arches
-      - ./:/web_root/project_name
+      - ./:/web_root/bcrhp
     env_file:
       - ./docker/webpack/env_file.env
     ports:
@@ -43,5 +43,5 @@ networks:
 
 
 volumes:
-  arches-log-project_name7-5:
-  arches-static-project_name7-5:
+  arches-log-bcrhp7-5:
+  arches-static-bcrhp7-5:
