--- a/src/bcrhp/docker/bcrhp-supervisor.conf
+++ b/src/bcrhp/docker/bcrhp-supervisor.conf
@@ -21,4 +21,4 @@
     serverurl=unix:///tmp/supervisor.sock ; use unix:// schem for a unix sockets.
 
 [include]
-    files=./conf.d/project_name-celeryd.conf ./conf.d/project_name-celerybeat.conf
+    files=./conf.d/bcrhp-celeryd.conf ./conf.d/bcrhp-celerybeat.conf
