--- a/src/bcrhp/docker/conf.d/project_name-celeryd.conf
+++ b/src/bcrhp/docker/conf.d/project_name-celeryd.conf
@@ -3,8 +3,8 @@
 ; ==================================
 
 [program:celery]
-    command=python3 -m celery -A project_name.celery worker --loglevel=INFO
-    directory=/web_root/project_name
+    command=python3 -m celery -A bcrhp.celery worker --loglevel=INFO
+    directory=/web_root/bcrhp
 
     user=root
     numprocs=1
