--- a/src/bcrhp/Dockerfile
+++ b/src/bcrhp/Dockerfile
@@ -53,14 +53,16 @@ COPY ./arches ${ARCHES_ROOT}
 WORKDIR ${ARCHES_ROOT}
 RUN pip install -e . && \
     pip install -r arches/install/requirements.txt && \
-    pip install -r arches/install/requirements_dev.txt
-COPY /bcrhp/docker/entrypoint.sh ${WEB_ROOT}/entrypoint.sh
+    pip install -r arches/install/requirements_dev.txt && \
+    pip install python-dotenv boto3==1.26 django-storages==1.13 oracledb html2text
+COPY ./bcrhp/docker/entrypoint.sh ${WEB_ROOT}/entrypoint.sh
 RUN chmod -R 700 ${WEB_ROOT}/entrypoint.sh &&\
   dos2unix ${WEB_ROOT}/entrypoint.sh
 RUN mkdir /var/log/supervisor
 RUN mkdir /var/log/celery
 # Set default workdir
 WORKDIR ${APP_ROOT}
+COPY ../common/* ${PROJECT_NAME}/
 # # Set entrypoint
 ENTRYPOINT ["../entrypoint.sh"]
 CMD ["run_arches"]
