--- a/src/bcrhp/docker/conf.d/bcrhp-celerybeat.conf
+++ b/src/bcrhp/docker/conf.d/bcrhp-celerybeat.conf
@@ -3,8 +3,8 @@
 ; ================================
 
 [program:celerybeat]
-    command=python3 -m celery -A project_name.celery beat --loglevel=INFO
-    directory=/web_root/project_name
+    command=python3 -m celery -A bcrhp.celery beat --loglevel=INFO
+    directory=/web_root/bcrhp
 
     user=root
     numprocs=1
