--- a/src/bcrhp/bcrhp/package.json
+++ b/src/bcrhp/bcrhp/package.json
@@ -7,10 +7,10 @@
         "start": "./media/node_modules/.bin/cross-env NODE_PATH=./media/node_modules NODE_OPTIONS=--max-old-space-size=2048 ./media/node_modules/.bin/webpack serve --config webpack/webpack.config.dev.js"
     },
     "devDependencies": {
-        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.5.2"
+        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#dev/7.6.x"
     },
     "dependencies": {
-        "arches": "archesproject/arches#7.5.2"
+        "arches": "archesproject/arches#dev/7.6.x"
     },
     "nodeModulesPaths": {
     }
