Replace bcrhp->bcfms docker config

--- a/src/bcfms/docker/bcfms-supervisor.conf
+++ b/src/bcfms/docker/bcfms-supervisor.conf
@@ -21,4 +21,4 @@
     serverurl=unix:///tmp/supervisor.sock ; use unix:// schem for a unix sockets.
 
 [include]
-    files=./conf.d/bcrhp-celeryd.conf ./conf.d/bcrhp-celerybeat.conf
+    files=./conf.d/bcfms-celeryd.conf ./conf.d/bcfms-celerybeat.conf
