--- a/src/bcfms/docker/conf.d/bcfms-celerybeat.conf
+++ b/src/bcfms/docker/conf.d/bcfms-celerybeat.conf
@@ -3,8 +3,8 @@
 ; ================================
 
 [program:celerybeat]
-    command=python3 -m celery -A bcrhp.celery beat --loglevel=INFO
-    directory=/web_root/bcrhp
+    command=python3 -m celery -A bcfms.celery beat --loglevel=INFO
+    directory=/web_root/bcfms
 
     user=root
     numprocs=1
