--- a/src/bcfms/docker/production/env_file.env
+++ b/src/bcfms/docker/production/env_file.env
@@ -1,10 +1,10 @@
 #arches
-ARCHES_PROJECT=bcrhp
+ARCHES_PROJECT=bcfms
 INSTALL_DEFAULT_GRAPHS=False
 INSTALL_DEFAULT_CONCEPTS=False
 PGUSERNAME=postgres
 PGPASSWORD=postgis
-PGDBNAME=bcrhp
+PGDBNAME=bcfms
 PGHOST=postgres14-3_arches7-5
 PGPORT=5432
 ESHOST=elasticsearch8-3_arches7-5
@@ -16,7 +16,7 @@ DJANGO_PORT=80
 #DJANGO_REMOTE_DEBUG=False
 PYTHONUNBUFFERED=0
 TZ=PST
-ELASTICSEARCH_PREFIX=bcrhp
+ELASTICSEARCH_PREFIX=bcfms
 
 #rabbitmq
 RABBITMQ_USER=guest
@@ -26,6 +26,6 @@ RABBITMQ_PASS=guest
 CANTALOUPE_ENDPOINT_ADMIN_ENABLED=true
 CANTALOUPE_ENDPOINT_ADMIN_USERNAME=admin
 CANTALOUPE_ENDPOINT_ADMIN_SECRET=admin
-CANTALOUPE_HOST=cantaloupe_bcrhp
+CANTALOUPE_HOST=cantaloupe_bcfms
 CANTALOUPE_PORT=8182
 CANTALOUPE_FILESYSTEMSOURCE_BASICLOOKUPSTRATEGY_PATH_PREFIX=/imageroot/
