--- a/src/bcfms/docker/webpack/env_file.env
+++ b/src/bcfms/docker/webpack/env_file.env
@@ -1,6 +1,6 @@
 
 NODE_OPTIONS=--max-old-space-size=10000
-ARCHES_PROJECT=bcrhp
+ARCHES_PROJECT=bcfms
 
 #arches
 INSTALL_DEFAULT_GRAPHS=False
@@ -28,6 +28,6 @@ RABBITMQ_PASS=guest
 CANTALOUPE_ENDPOINT_ADMIN_ENABLED=true
 CANTALOUPE_ENDPOINT_ADMIN_USERNAME=admin
 CANTALOUPE_ENDPOINT_ADMIN_SECRET=admin
-CANTALOUPE_HOST=cantaloupe_bcrhp
+CANTALOUPE_HOST=cantaloupe_bcfms
 CANTALOUPE_PORT=8182
 CANTALOUPE_FILESYSTEMSOURCE_BASICLOOKUPSTRATEGY_PATH_PREFIX=/imageroot/
