--- a/src/bcfms/docker-compose.yml
+++ b/src/bcfms/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
-name: bcrhp7-5
+name: bcfms7-5
 services:
-  bcrhp:
-    container_name:  bcrhp7-5
-    image: bcgov/bcrhp7-5
+  bcfms:
+    container_name:  bcfms7-5
+    image: bcgov/bcfms7-5
     build:
       context: ..
-      dockerfile: bcrhp/Dockerfile
+      dockerfile: bcfms/Dockerfile
     command: run_arches
     volumes:
       - ../arches/:/web_root/arches
-      - ./:/web_root/bcrhp
+      - ./:/web_root/bcfms
     env_file:
       - ./docker/env_file.env
     ports:
@@ -21,16 +21,16 @@ services:
     stdin_open: true
     tty: true
 
-  bcrhp-webpack:
-    container_name: bcrhp-webpack-7-5
-    image: bcgov/bcrhp-webpack-7-5
+  bcfms-webpack:
+    container_name: bcfms-webpack-7-5
+    image: bcgov/bcfms-webpack-7-5
     build:
       context: ..
-      dockerfile: bcrhp/docker/webpack/Dockerfile
+      dockerfile: bcfms/docker/webpack/Dockerfile
     command: run_webpack
     volumes:
       - ../arches/:/web_root/arches
-      - ./:/web_root/bcrhp
+      - ./:/web_root/bcfms
     env_file:
       - ./docker/webpack/env_file.env
     ports:
@@ -45,5 +45,5 @@ networks:
 
 
 volumes:
-  arches-log-bcrhp7-5:
-  arches-static-bcrhp7-5:
+  arches-log-bcfms7-5:
+  arches-static-bcfms7-5:
