--- a/src/bcfms/docker/conf.d/bcfms-celeryd.conf
+++ b/src/bcfms/docker/conf.d/bcfms-celeryd.conf
@@ -3,8 +3,8 @@
 ; ==================================
 
 [program:celery]
-    command=python3 -m celery -A bcrhp.celery worker --loglevel=INFO
-    directory=/web_root/bcrhp
+    command=python3 -m celery -A bcfms.celery worker --loglevel=INFO
+    directory=/web_root/bcfms
 
     user=root
     numprocs=1
